# swagger.yaml
@@ -381,58 +381,58 @@ components:
         - created_at
         - updated_at
     # StoreBase Schema (Base schema for store)
-    StoreBase:
-      type: object
-      properties:
-        store_id:
-          type: string
-          format: uuid
-        name:
-          type: string
-        address:
-          type: string
-        contact_email:
-          type: string
-          format: email
-        phone:
-          type: string
-        proprietor_name:
-          type: string
-          nullable: true
-        dl_no:
-          type: string
-          nullable: true
-        dl_license_photo:
-          type: string
-          nullable: true
-        gst_pan_number:
-          type: string
-          nullable: true
-        gst_certificate_img:
-          type: string
-          nullable: true
-        govt_id:
-          type: string
-          nullable: true
-        created_at:
-          type: string
-          format: date-time
-        updated_at:
-          type: string
-          format: date-time
-      required:
-        - store_id
-        - name
-        - address
-        - contact_email
-        - phone
-        - created_at
-        - updated_at
+      StoreBase:
+        type: object
+        properties:
+          store_id:
+            type: string
+            format: uuid
+          name:
+            type: string
+          address:
+            type: string
+          email:
+            type: string
+            format: email
+          phone:
+            type: string
+          proprietor_name:
+            type: string
+            nullable: true
+          dl_no:
+            type: string
+            nullable: true
+          dl_license_photo:
+            type: string
+            nullable: true
+          gst_pan_number:
+            type: string
+            nullable: true
+          gst_certificate_img:
+            type: string
+            nullable: true
+          govt_id:
+            type: string
+            nullable: true
+          created_at:
+            type: string
+            format: date-time
+          updated_at:
+            type: string
+            format: date-time
+        required:
+          - store_id
+          - name
+          - address
+          - email
+          - phone
+          - created_at
+          - updated_at
 
-    # StoreCreate Schema (Used for creating a new store)
-    StoreCreate:
-      allOf:
-        - $ref: '#/components/schemas/StoreBase'
+      # StoreCreate Schema (Used for creating a new store)
+      StoreCreate:
+        allOf:
+          - $ref: '#/components/schemas/StoreBase'
 
     # StoreUpdate Schema (Used for updating an existing store)
     StoreUpdate:
@@ -442,7 +442,7 @@ components:
           type: string
         address:
           type: string
-        contact_email:
+        email:
           type: string
           format: email
         phone:
@@ -479,12 +479,8 @@ components:
       properties:
         user_id:
           type: string
-          format: uuid
         name:
           type: string
-        email:
-          type: string
-          format: email
         created_at:
           type: string
           format: date-time
@@ -494,7 +490,7 @@ components:
       required:
         - user_id
         - name
-        - email
+        - address
         - created_at
         - updated_at
 
@@ -503,10 +499,7 @@ components:
       allOf:
         - $ref: '#/components/schemas/UserBase'
       properties:
-        password:
-          type: string
-      required:
-        - password
+      required: []
 
     # UserUpdate Schema (Used for updating an existing user)
     UserUpdate:
@@ -514,9 +507,6 @@ components:
       properties:
         name:
           type: string
-        email:
-          type: string
-          format: email
         updated_at:
           type: string
           format: date-time
@@ -528,7 +518,6 @@ components:
       properties:
         user_id:
           type: string
-          format: uuid
       required:
         - user_id
     # EntityBase Schema (Base schema for entity data)
@@ -568,7 +557,6 @@ components:
           format: uuid
         user_id:
           type: string
-          format: uuid
         amount:
           type: number
           format: float
@@ -604,7 +592,6 @@ components:
           format: uuid
         user_id:
           type: string
-          format: uuid
         amount:
           type: number
           format: float
@@ -640,7 +627,6 @@ components:
           format: uuid
         user_id:
           type: string
-          format: uuid
         amount:
           type: number
           format: float
@@ -670,7 +656,6 @@ components:
           format: uuid
         user_id:
           type: string
-          format: uuid
         amount:
           type: number
           format: float
@@ -1260,7 +1245,6 @@ paths:
           required: true
           schema:
             type: string
-            format: uuid
       responses:
         '200':
           description: User found
@@ -1280,7 +1264,6 @@ paths:
           required: true
           schema:
             type: string
-            format: uuid
       requestBody:
         content:
           application/json:
@@ -1306,7 +1289,6 @@ paths:
           required: true
           schema:
             type: string
-            format: uuid
       responses:
         '200':
           description: User deleted successfully
